ek_smg rounds more realistic struct/item damage

--- a/realistic_damage.yaml
+++ b/realistic_damage.yaml
@@ -1,4 +1,14 @@
 personalweapon:
+  ek_smg:
+    projectiles:
+      regular:
+        update:
+          structdamage: 5
+          itemdamage: 5
+      physicorium:
+        update:
+          structdamage: 5
+          itemdamage: 5
   piperrifle:
     projectiles:
       regular:
