ek_microssl support

--- a/realistic_damage.yaml
+++ b/realistic_damage.yaml
@@ -121,6 +121,8 @@ personalweapon:
           # rest unchanged
         # rest unchanged
 submarineweapon:
+  microssl:
+    action: uses ek_chaingun ammo
   ek_autocannon:
     projectiles:
       regular:
